src/scss/components/_timeline.scss
.rt-timeline {
  position: relative;
  overflow: hidden;
  padding-top: $react-timelines-marker-height;
}

.rt-timeline__header {}

.rt-timeline__header-scroll {
  overflow-x: auto;

  &::-webkit-scrollbar {
    display: none;
  }
}

.rt-timeline__header.rt-is-sticky {
  position: fixed;
  top: 0;
  z-index: 1;
}

.rt-timeline__body {
  position: relative;
}

